--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,17 @@
   }
 }
 
+.coin-inputs {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+
+  margin-top: 1rem;
+}
+
 .items {
   background-color: #282c34;
   min-height: 100vh;
@@ -25,26 +36,7 @@
   color: white;
 }
 
-.items .item {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  border: 1px solid #282c34;
-  border-radius: 0.5rem;
-  padding: 1rem;
-  margin: 1rem;
-  background-color: #282c34;
-  color: white;
-  font-size: calc(10px + 2vmin);
-  font-weight: bold;
-  text-align: center;
-  cursor: pointer;
-}
-
-.App-link {
+.items .App-link {
   color: #61dafb;
 }
 
